--- a/src/app/registro/registro.html
+++ b/src/app/registro/registro.html
@@ -13,25 +13,24 @@
 
       <form [formGroup]="registroForm" (ngSubmit)="registrar()">
 
-        <!-- Email / Usuario -->
         <div class="mb-3">
           <input type="text" formControlName="usuario" class="form-control" placeholder="Nombre de usuario"
             [class.is-invalid]="registroForm.get('usuario')?.invalid && registroForm.get('usuario')?.touched"
-            [class.is-valid]="registroForm.get('usuario')?.valid && registroForm.get('usuario')?.touched" />
+            [class.is-valid]="registroForm.get('usuario')?.valid" />
           <div class="invalid-feedback">El usuario es obligatorio.</div>
         </div>
 
         <div class="mb-3">
           <input type="email" formControlName="email" class="form-control" placeholder="Correo electrónico"
             [class.is-invalid]="registroForm.get('email')?.invalid && registroForm.get('email')?.touched" 
-            [class.is-valid]="registroForm.get('email')?.valid && registroForm.get('email')?.touched" />
+            [class.is-valid]="registroForm.get('email')?.valid" />
           <div class="invalid-feedback">Debe ingresar un email válido.</div>
         </div>
 
         <div class="mb-3">
           <input type="password" formControlName="password" class="form-control" placeholder="Contraseña"
             [class.is-invalid]="registroForm.get('password')?.invalid && registroForm.get('password')?.touched"
-            [class.is-valid]="registroForm.get('password')?.valid && registroForm.get('password')?.touched" />
+            [class.is-valid]="registroForm.get('password')?.valid" />
           <div class="invalid-feedback">
             La contraseña es obligatoria (mínimo 8 caracteres).
           </div>
