--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
-<router-outlet />
+<div *ngIf="logueado">
+  <app-navbar></app-navbar>
+</div>
+<div class="container-fluid mt-4">
+  <router-outlet></router-outlet>
+</div>
