--- a/src/app/factura/factura.html
+++ b/src/app/factura/factura.html
@@ -1,4 +1,4 @@
-<div class="container mt-4">
+<div id="pdfPrinter" class="container mt-4">
   <h2>Factura</h2>
 
   <table class="table table-bordered">
@@ -22,7 +22,7 @@
         <td *ngIf="tipoCambioUSD === 0">Cargando...</td>
       </tr>
     </tbody>
-    
+
   </table>
 
   <div class="mt-3">
