--- a/src/app/factura/factura.html
+++ b/src/app/factura/factura.html
@@ -32,3 +32,8 @@
 
   <button class="btn btn-success mt-3" (click)="confirmarCompra()">Confirmar Compra</button>
 </div>
+
+<div class="mt-4">
+  <h3>Chat de facturación</h3>
+  <app-chat [usuarioActual]="usuarioLogueado"></app-chat>
+</div>
