--- a/src/app/factura/factura.html
+++ b/src/app/factura/factura.html
@@ -30,10 +30,9 @@
     <strong> Monto Total USD:</strong> ${{ obtenerTotalUSD() | number:'1.2-2' }}
   </div>
 
-  <button class="btn btn-success mt-3" (click)="confirmarCompra()">Confirmar Compra</button>
-</div>
+  <div class="d-flex gap-2 mt-3">
+    <button class="btn btn-success" (click)="confirmarCompra()">Confirmar Compra</button>
+    <button class="btn btn-danger" (click)="volver()">Volver</button>
+  </div>
 
-<div class="mt-4">
-  <h3>Chat de facturación</h3>
-  <app-chat [usuarioActual]="usuarioLogueado"></app-chat>
 </div>
