--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -5,6 +5,7 @@
 
     <div *ngIf="logueado" class="d-flex align-items-center ms-auto">
       <span class="text-white me-3">Bienvenido, {{ nombreUsuario }}</span>
+      <a class="btn btn-outline-info btn-sm me-2" routerLink="/chat">Chat</a>
       <button class="btn btn-outline-light btn-sm" (click)="logout()">Cerrar Sesión</button>
     </div>
   </div>
